@@ -1,3 +1,7 @@
+2010-06-30  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
+        * Tag as TrigT1CaloMonitoring-00-06-32
+        * Fix for bug #69238.
+
 2010-06-25  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
         * Tag as TrigT1CaloMonitoring-00-06-31
         * Extend shrunk eta bins to JEM/CPM.
